--- a/package.json
+++ b/package.json
@@ -1,42 +1,43 @@
 {
-  "type": "commonjs",
+  "type": "module",
   "scripts": {
+    "postinstall": "husky init",
     "lint": "eslint .",
     "lintstaged": "npm run lint -- --fix",
-    "prepare": "husky install",
+    "prepare": "husky",
     "prepare:permission": "chmod ug+x .husky/*",
     "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch",
     "test:ci": "npm test -- --coverage",
     "test:staged": "npm test -- --findRelatedTests",
-    "dev": "ts-node src/mocks/index.ts",
-    "debug": "NODE_OPTIONS=\"--inspect-brk\" ts-node src/mocks/index.ts",
+    "dev": "tsx src/mocks/index.ts",
+    "debug": "tsx --inspect-brk src/mocks/index.ts",
     "clean": "rimraf dist",
     "build": "npm run clean && ttsc -p tsconfig-build.json",
     "pack": "npm run build && npm pack",
     "start": "node dist/main/index"
   },
   "devDependencies": {
-    "@types/jest": "^27.4.1",
-    "@types/module-alias": "^2.0.1",
-    "@types/node": "^17.0.29",
-    "@typescript-eslint/eslint-plugin": "^4.33.0",
-    "eslint": "^7.32.0",
-    "eslint-config-standard-with-typescript": "^21.0.1",
-    "eslint-plugin-import": "^2.26.0",
+    "@types/jest": "^29.5.14",
+    "@types/module-alias": "^2.0.4",
+    "@types/node": "^22.13.0",
+    "@typescript-eslint/eslint-plugin": "^8.22.0",
+    "eslint": "^9.19.0",
+    "eslint-config-prettier": "^10.0.1",
+    "eslint-plugin-import": "^2.31.0",
     "eslint-plugin-node": "^11.1.0",
-    "eslint-plugin-promise": "^5.2.0",
-    "git-commit-msg-linter": "^4.1.2",
-    "husky": "^7.0.4",
-    "jest": "^27.5.1",
-    "lint-staged": "^12.4.1",
+    "eslint-plugin-prettier": "^5.2.3",
+    "eslint-plugin-promise": "^7.2.1",
+    "git-commit-msg-linter": "^5.0.8",
+    "husky": "^9.1.7",
+    "jest": "^29.7.0",
+    "lint-staged": "^15.4.3",
     "module-alias": "^2.2.3",
-    "rimraf": "^5.0.5",
-    "ts-jest": "^27.1.4",
-    "ts-node": "^10.7.0",
-    "ts-node-dev": "^1.1.8",
+    "prettier": "^3.4.2",
+    "rimraf": "^6.0.1",
+    "ts-jest": "^29.2.5",
     "ttypescript": "^1.5.15",
-    "typescript-transform-paths": "^3.4.7"
+    "typescript-transform-paths": "^3.5.3"
   },
   "name": "@lakshamana.dev/wallydator",
   "description": "",
@@ -48,5 +49,8 @@
   "license": "MIT",
   "files": [
     "./dist"
-  ]
+  ],
+  "dependencies": {
+    "tsx": "^4.19.2"
+  }
 }
