--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,30 +1,28 @@
 {
- "compilerOptions": {
-   "incremental": true,
-   "outDir": "dist",
-   "declaration": true,
-   "rootDirs": ["./src", "./tests"],
-   "target": "es2021",
-   "sourceMap": true,
-   "skipLibCheck": true,
-   "forceConsistentCasingInFileNames": true,
-   "module": "commonjs",
-   "moduleResolution": "node",
-   "esModuleInterop": true,
-   "baseUrl": "./src",
-   "paths": {
-     "@/*": ["./*"],
-     "@/tests/*": ["../tests/*"]
-   },
-   "plugins": [
-     { "transform": "typescript-transform-paths", "afterDeclarations": true }
-   ],
-   "strict": true,
-   "noImplicitOverride": true,
-   "removeComments": true,
-   "emitDecoratorMetadata": true,
-   "experimentalDecorators": true
- },
- "include": ["./src", "./tests"],
- "files": ["./index.ts"]
+  "compilerOptions": {
+    "incremental": true,
+    "outDir": "dist",
+    "declaration": true,
+    "rootDirs": ["./src", "./tests"],
+    "target": "es2021",
+    "sourceMap": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true,
+    "module": "ESNext",
+    "moduleResolution": "node",
+    "esModuleInterop": true,
+    "baseUrl": "./src",
+    "paths": {
+      "@/*": ["./*"],
+      "@/tests/*": ["../tests/*"]
+    },
+    "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }],
+    "strict": true,
+    "removeComments": true,
+    "noImplicitAny": false,
+    "emitDecoratorMetadata": true,
+    "experimentalDecorators": true
+  },
+  "include": ["./src", "./tests"],
+  "files": ["./index.ts"]
 }
