--- a/package.json
+++ b/package.json
@@ -1,14 +1,11 @@
 {
   "type": "module",
   "scripts": {
-    "postinstall": "husky init",
     "lint": "eslint .",
     "lintstaged": "npm run lint -- --fix",
-    "prepare": "husky",
-    "prepare:permission": "chmod ug+x .husky/*",
     "test": "jest --passWithNoTests",
     "test:watch": "npm test -- --watch",
-    "test:ci": "npm test -- --coverage",
+    "test:ci": "jest --collectCoverage",
     "test:staged": "npm test -- --findRelatedTests",
     "dev": "tsx src/mocks/index.ts",
     "debug": "tsx --inspect-brk src/mocks/index.ts",
@@ -29,7 +26,6 @@
     "eslint-plugin-prettier": "^5.2.3",
     "eslint-plugin-promise": "^7.2.1",
     "git-commit-msg-linter": "^5.0.8",
-    "husky": "^9.1.7",
     "jest": "^29.7.0",
     "lint-staged": "^15.4.3",
     "module-alias": "^2.2.3",
