--- a/tsconfig.json
+++ b/tsconfig.json
@@ -18,8 +18,8 @@
     },
     "plugins": [{ "transform": "typescript-transform-paths", "afterDeclarations": true }],
     "strict": true,
+    "noImplicitOverride": true,
     "removeComments": true,
-    "noImplicitAny": false,
     "emitDecoratorMetadata": true,
     "experimentalDecorators": true
   },
